[package]
name = "sandbox"
version = "0.1.0"
authors = ["pavelmukhanov"]

[dependencies]
tokio = "0.1.7"
futures = "0.1"
tokio-timer = "0.2.5"
tokio-io = "0.1"
env_logger = "0.4.1"
log = "0.3.6"
rand = "0.5.0-pre.0"
partial-io = { version = "0.3", features = ["tokio"] }
byteorder = "1"
num = "0.2.0"
tokio-codec = "0.1.0"
bytes = "0.4.9"
clap = "2.32.0"
tokio-retry = "0.2.0"
lazy_static = "1.1.0"
failure = "0.1.2"