[package]
name = "sandbox"
version = "0.1.0"
authors = ["pavelmukhanov"]
edition = "2018"

[dependencies]
futures = "0.1"
tokio = "0.1.7"
tokio-timer = "0.2.5"
tokio-codec = "0.1.0"
env_logger = "0.4.1"
log = "0.3.6"
rand = "0.5.0-pre.0"
byteorder = "1"
num = "0.2.0"
bytes = "0.4.8"
clap = "2.32.0"
tokio-retry = "0.2.0"
lazy_static = "1.1.0"
failure = "0.1.2"
futures-cpupool = "0.1.8"
openssl = "0.10.12"
foreign-types-shared = "0.1.1"
base64 = "0.9.3"
hex = "0.3.2"
smallvec = "0.6"
procs  = { path = "procs", version = "0.1.0"}
protobuf = "2.5.0"
color-backtrace = "0.1"
serde = "1.0.90"
serde_derive ="1.0.90"
ifmt = "0.1.1"
#exonum = "0.10.2"
exonum = { path = "../exonum/exonum" }
exonum-merkledb = { path = "../exonum/components/merkledb" }
exonum-crypto = { path = "../exonum/components/crypto" }
intrusive-collections = "0.7.8"

external = { path = "external"}


#[[bin]]
#name = "proof"
#path = "src/hash_bench.rs"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench"
harness = false
path = "benches/bench.rs"
