[package]
name = "sandbox"
version = "0.1.0"
authors = ["pavelmukhanov"]
edition = "2018"
build = "build.rs"

[dependencies]
futures = "0.1"
env_logger = "0.4.1"
log = "0.3.6"
rand = "0.5.0-pre.0"
byteorder = "1"
num = "0.2.0"
bytes = "0.4.8"
clap = "2.32.0"
tokio-retry = "0.2.0"
tokio = "0.1"
lazy_static = "1.1.0"
failure = "0.1.2"
futures-cpupool = "0.1.8"
openssl = "0.10.12"
foreign-types-shared = "0.1.1"
base64 = "0.9.3"
hex = "0.3.2"
smallvec = "0.6"
procs  = { path = "procs", version = "0.1.0"}
color-backtrace = "0.1"
serde = "1.0.90"
serde_derive ="1.0.90"
ifmt = "0.1.1"
intrusive-collections = "0.7.8"
nom = "5.0.0"
external = { path = "external"}
secret-tree = "0.1.1"
sodiumoxide = "0.2.2"
itertools = "0.8.0"
snow = "0.6.0"
protobuf = { version = "2.8.1", features = ["with-serde"] }
libp2p = "0.12.0"
structopt = { version = "0.3", default-features = false }
paste = "0.1"
rocksdb = "0.13.0"
typemap = "0.3.3"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench"
harness = false
path = "benches/bench.rs"

[build-dependencies]
protoc-rust = "2.7.0"

[[bin]]
name = "node"
path = "src/p2p/node.rs"

[workspace]
members = ["derive-test"]
