[package]
name = "derive-test"
version = "0.12.0"
edition = "2018"


[dependencies]
rand = "0.7"
failure = "0.1.5"
serde = "1.0.10"
serde_derive = "1.0.64"
toml = "0.5.0"
protobuf = { version = "2.8.1", features = ["with-serde"] }
exonum-proto = {  version = "0.13.0-rc.1", path = "../../exonum/components/proto" }
protobuf-convert = "0.2.0"


[dev-dependencies]
tempdir = "0.3.7"
hex = "0.4"

[build-dependencies]
exonum-build = {  version = "0.13.0-rc.1", path = "../../exonum/components/build" }
